--- a/sites/index.html
+++ b/sites/index.html
@@ -8,9 +8,10 @@
     <meta name="description" content="demo" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="./stylesheet/index.css">
+    <link rel="stylesheet" href="./style/index.css">
   </head>
   <body>
     <div id="app"></div>
+    <script src="index.js"></script>
   </body>
 </html>
