--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html> <html> <head> <meta charset=UTF-8> <meta httpequiv=X-UA-Compatible content="IE=edge"/> <title>Demo</title> <meta name=keywords content=demo /> <meta name=description content=demo /> <meta http-equiv=Content-Type content="text/html; charset=utf-8"> <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"> <link rel=stylesheet href=./stylesheet/index.css> <link href="./stylesheet/index.css" rel="stylesheet"></head> <body> <div id=app></div> <script type="text/javascript" src="./js/vendors.595d8af0.js"></script><script type="text/javascript" src="./js/index.595d8af0.js"></script></body> </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="format-detection" content="telephone=no, email=no">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <title>dragon-ui</title>
+  <link href="./stylesheet/index.870d6f17.css" rel="stylesheet"></head>
+  <body>
+    <div id="app"></div>
+  <script type="text/javascript" src="./js/manifest.089027d2.js"></script><script type="text/javascript" src="./js/index.c3e6463d.js"></script></body>
+</html>
