--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="apple-touch-fullscreen" content="yes">
     <title>dragon-ui</title>
-  <link href="./stylesheet/index.553473e5.css" rel="stylesheet"></head>
+  <link href="./stylesheet/41.a2674326.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="./js/manifest.70bc9ef9.js"></script><script type="text/javascript" src="./js/index.95121abd.js"></script></body>
+  <script type="text/javascript" src="./js/manifest.aee42bb7.js"></script><script type="text/javascript" src="./js/index.f94a8865.js"></script></body>
 </html>
