--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="apple-touch-fullscreen" content="yes">
-    <title>dragon-ui</title>
+    <title>Zarm Web - 众安科技桌面端组件库</title>
   </head>
   <body>
     <div id="app"></div>
