--- a/site/index_umd.html
+++ b/site/index_umd.html
@@ -3,19 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>zarm-web</title>
+  <title>Zarm Web - 众安科技桌面端组件库</title>
   <link rel="stylesheet" href="../dist/zarm-web.css">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="https://unpkg.com/react@16.4.0/umd/react.production.min.js" type="text/javascript"></script>
-  <script src="https://unpkg.com/react-dom@16.4.0/umd/react-dom.production.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/react@latest/umd/react.production.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js" type="text/javascript"></script>
   <script src="https://unpkg.com/babel-standalone@latest/babel.min.js"></script>
   <script src="../dist/zarm-web.js" type="text/javascript"></script>
   <script type="text/babel">
-    const { Button } = window["zarm-web"];
-    ReactDOM.render(<Button theme="info">按钮</Button>, document.getElementById('app'));
+    console.log(window['zarm-web'])
+    const { Button } = window['zarm-web'];
+    ReactDOM.render(<Button block theme="primary">按钮</Button>, document.getElementById('app'));
   </script>
 </body>
 
