chore: update button

--- a/site/index_umd.html
+++ b/site/index_umd.html
@@ -16,7 +16,7 @@
   <script type="text/babel">
     console.log(window['zarm-web'])
     const { Button } = window['zarm-web'];
-    ReactDOM.render(<Button block theme="primary">按钮</Button>, document.getElementById('app'));
+    ReactDOM.render(<Button theme="primary">按钮</Button>, document.getElementById('app'));
   </script>
 </body>
 
