--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
     <meta name="apple-touch-fullscreen" content="yes">
     <title>Zarm Web - 众安科技桌面端组件库</title>
